<resources>
    <string name="app_name">Quiz</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="name">e.g. JOHN</string>
    <string name="welcome">Welcome</string>
    <string name="next">NEXT</string>
    <string name="submit">SUBMIT</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="finish">FINISH</string>
    <string name="result">Result</string>
    <string name="congratulation">Congratulation!</string>
    <string name="your_score_is">Your score is</string>
    <string name="start">START</string>
    <string name="trophy">trophy</string>
    <string name="created_wendy_2022">created Wendy@2022</string>
</resources>