<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="36sp" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:src="@drawable/ic_trophy"
        android:contentDescription="@string/trophy"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/congratulation"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        tools:text="@string/name"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        tools:text="@string/your_score_is"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:paddingVertical="16dp"
        android:text="@string/finish"
        android:textSize="24sp" />

</LinearLayout>