<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:text="@string/quiz_app"
        android:textSize="36sp"
        android:gravity="center|bottom"
        android:textColor="@color/white"
        android:layout_marginVertical="16dp"
         />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/gray_100"
        app:cardCornerRadius="24dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="#696969"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_name"
                android:textSize="16sp"
                android:textStyle="italic"
                android:gravity="center"
                android:textColor="#696969"
                android:layout_marginTop="24dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="4dp"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    android:textColor="@color/gray_600"
                    android:textColorHint="@color/gray_500">

                </androidx.appcompat.widget.AppCompatEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/indigo_500"
                android:layout_marginVertical="8dp"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:paddingVertical="16dp"
                android:text="@string/start"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:gravity="bottom|end"
        android:padding="12dp"
        android:text="@string/created_wendy_2022"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="italic" />
</LinearLayout>